--- a/_2_HelloAndroid/MyFirstApp/app/src/main/AndroidManifest.xml
+++ b/_2_HelloAndroid/MyFirstApp/app/src/main/AndroidManifest.xml
@@ -6,12 +6,18 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/skicenter_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/skicenter_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFirstApp"
         tools:targetApi="31">
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NewActivity_1_"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
