--- a/_2_HelloAndroid/Passions/app/src/main/AndroidManifest.xml
+++ b/_2_HelloAndroid/Passions/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Passions"
         tools:targetApi="31">
         <activity
+            android:name=".forDrawer.ActivityMain2"
+            android:exported="false" />
+        <activity
             android:name=".ActivityMain"
             android:exported="true">
             <intent-filter>
