--- a/_2_HelloAndroid/Cannonball/app/src/main/AndroidManifest.xml
+++ b/_2_HelloAndroid/Cannonball/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Cannonball"
         tools:targetApi="31">
         <activity
+            android:name=".ActivityFive"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityFour"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityThree"
+            android:exported="false" />
+        <activity
             android:name=".ActivityTwo"
             android:exported="false" />
         <activity
