--- a/_2_HelloAndroid/MaterialDesign3/app/src/main/AndroidManifest.xml
+++ b/_2_HelloAndroid/MaterialDesign3/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MaterialDesign3"
         tools:targetApi="31">
         <activity
+            android:name=".ActivityThree"
+            android:exported="false" />
+        <activity
             android:name=".ActivityTwo"
             android:exported="false" />
         <activity
