--- a/_2_HelloAndroid/Pomegranate/app/src/main/AndroidManifest.xml
+++ b/_2_HelloAndroid/Pomegranate/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.Pomegranate"
         tools:targetApi="31">
         <activity
+            android:name=".ActivityThree"
+            android:exported="false"
+            android:screenOrientation="sensor"/>
+        <activity
+            android:name=".ActivityTwo"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
