--- a/_2_HelloAndroid/Pomegranate/app/src/main/AndroidManifest.xml
+++ b/_2_HelloAndroid/Pomegranate/app/src/main/AndroidManifest.xml
@@ -13,9 +13,15 @@
         android:theme="@style/Theme.Pomegranate"
         tools:targetApi="31">
         <activity
+            android:name=".ActivityFive"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityFour"
+            android:exported="false" />
+        <activity
             android:name=".ActivityThree"
             android:exported="false"
-            android:screenOrientation="sensor"/>
+            android:screenOrientation="sensor" />
         <activity
             android:name=".ActivityTwo"
             android:exported="false" />
