--- a/_2_HelloAndroid/Pomegranate/app/src/main/AndroidManifest.xml
+++ b/_2_HelloAndroid/Pomegranate/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Pomegranate"
         tools:targetApi="31">
         <activity
+            android:name=".ActivitySeven"
+            android:exported="false" />
+        <activity
+            android:name=".ActivitySix"
+            android:exported="false" />
+        <activity
             android:name=".ActivityFive"
             android:exported="false" />
         <activity
