--- a/_2_HelloAndroid/KekodLessonOne/app/src/main/AndroidManifest.xml
+++ b/_2_HelloAndroid/KekodLessonOne/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.KekodLessonOne"
         tools:targetApi="31">
         <activity
+            android:name=".FourthActivity"
+            android:exported="false" />
+        <activity
             android:name=".ThirdActivity"
             android:exported="false" />
         <activity
