--- a/_2_HelloAndroid/KotlinMaps/app/src/main/AndroidManifest.xml
+++ b/_2_HelloAndroid/KotlinMaps/app/src/main/AndroidManifest.xml
@@ -32,13 +32,13 @@
             android:value="AIzaSyDMNQqxl7nFkLLpb95_6Ly4t_Sq4MbLsoc" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".view.MapsActivity"
             android:exported="true"
             android:label="@string/title_activity_maps">
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
