--- a/_2_HelloAndroid/KekodLessonOne/app/src/main/AndroidManifest.xml
+++ b/_2_HelloAndroid/KekodLessonOne/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.KekodLessonOne"
         tools:targetApi="31">
         <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FifthActivity"
+            android:exported="false" />
+        <activity
             android:name=".FourthActivity"
             android:exported="false" />
         <activity
