--- a/_1_HelloKotlin/.gitignore
+++ b/_1_HelloKotlin/.gitignore
@@ -1,35 +1,5 @@
-### IntelliJ IDEA ###
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
-.DS_Store
-
-# Created by https://www.toptal.com/developers/gitignore/api/android,androidstudio,kotlin,java,windows,linux,intellij
-# Edit at https://www.toptal.com/developers/gitignore?templates=android,androidstudio,kotlin,java,windows,linux,intellij
+# Created by https://www.toptal.com/developers/gitignore/api/android,androidstudio,kotlin,java,windows,linux,intellij,git
+# Edit at https://www.toptal.com/developers/gitignore?templates=android,androidstudio,kotlin,java,windows,linux,intellij,git
 
 ### Android ###
 # Gradle files
@@ -71,6 +41,21 @@ gen-external-apklibs
 
 # Replacement of .externalNativeBuild directories introduced
 # with Android Studio 3.5.
+
+### Git ###
+# Created by git for backups. To disable backups in Git:
+# $ git config --global mergetool.keepBackup false
+*.orig
+
+# Created by git when using merge tools for conflicts
+*.BACKUP.*
+*.BASE.*
+*.LOCAL.*
+*.REMOTE.*
+*_BACKUP_*.txt
+*_BASE_*.txt
+*_LOCAL_*.txt
+*_REMOTE_*.txt
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -372,4 +357,4 @@ obj/
 
 !/gradle/wrapper/gradle-wrapper.jar
 
-# End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,kotlin,java,windows,linux,intellij
+# End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,kotlin,java,windows,linux,intellij,git
